Fix compile warnings